--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,20 @@
     "private": true,
     "dependencies": {
         "@koa/router": "^10.0.0",
+        "dotenv": "^9.0.2",
         "koa": "^2.13.1",
+        "koa-logger": "^3.2.1",
+        "pg": "^8.6.0",
         "typescript": "^4.2.4"
+    },
+    "devDependencies": {
+        "@types/koa": "^2.13.1",
+        "@types/koa-logger": "^3.1.1",
+        "@types/koa-router": "^7.4.2",
+        "@types/node": "^15.0.2"
+    },
+    "scripts": {
+        "start": "node src/server.ts",
+        "dev": "nodemon src/server.ts"
     }
 }
