--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,10 +14,11 @@
         "@types/koa": "^2.13.1",
         "@types/koa-logger": "^3.1.1",
         "@types/koa-router": "^7.4.2",
-        "@types/node": "^15.0.2"
+        "@types/node": "^15.0.2",
+        "ts-node": "^9.1.1"
     },
     "scripts": {
-        "start": "node src/server.ts",
+        "start": "npx ts-node src/server.ts",
         "dev": "nodemon src/server.ts"
     }
 }
