--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,17 +4,23 @@
     "private": true,
     "dependencies": {
         "@koa/router": "^10.0.0",
+        "bcrypt": "^5.0.1",
         "dotenv": "^9.0.2",
+        "jsonwebtoken": "^8.5.1",
         "koa": "^2.13.1",
+        "koa-bodyparser": "^4.3.0",
         "koa-logger": "^3.2.1",
         "pg": "^8.6.0",
         "typescript": "^4.2.4"
     },
     "devDependencies": {
         "@types/koa": "^2.13.1",
+        "@types/koa-bodyparser": "^4.3.0",
         "@types/koa-logger": "^3.1.1",
         "@types/koa-router": "^7.4.2",
+        "@types/koa__router": "^8.0.4",
         "@types/node": "^15.0.2",
+        "@types/pg": "^8.6.0",
         "ts-node": "^9.1.1"
     },
     "scripts": {
