--- a/back-end/tsconfig.json
+++ b/back-end/tsconfig.json
@@ -6,5 +6,7 @@
   "moduleResolution": "node",
   "sourceMap": true,
   "outDir": "/src"
-  }, "lib": ["es2015"]
+  }, "lib": ["es2015"],
+  "emitDecoratorMetadata": true,
+  "experimentalDecorators": true,
  }
