--- a/back-end/package.json
+++ b/back-end/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@koa/cors": "^3.1.0",
         "@koa/router": "^10.0.0",
         "bcrypt": "^5.0.1",
         "dotenv": "^9.0.2",
@@ -18,6 +19,7 @@
         "@types/koa-bodyparser": "^4.3.0",
         "@types/koa-logger": "^3.1.1",
         "@types/koa-router": "^7.4.2",
+        "@types/koa__cors": "^3.0.2",
         "@types/koa__router": "^8.0.4",
         "@types/node": "^15.0.2",
         "@types/pg": "^8.6.0",
