--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.8.1",
     "react-icons": "^4.3.1",
+    "react-simple-star-rating": "^3.0.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
